# engineering_practices_project

./: README.md  pyproject.toml
titanic_project/: predict_model.py  preprocess_data.py  snakefile  train_model.py
